# stellarstation-api

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE.header  README.md  buf.gen.yaml  buf.yaml  build.gradle  gradle.properties  gradlew  justfile  package.json  project.settings.gradle.kts  settings.gradle  settings.gradle.kts  shell.nix
.baseline/copyright/: 001_apache.txt
.circleci/: config.yml
.github/: CODEOWNERS
.github/workflows/: continuous-build.yml
api/: build.gradle  gradle.properties
cloudbuild/: README.md  id_rsa.enc  release-publish.yaml  secring.gpg.enc  snapshot-publish.yaml
examples/: README.md
examples/csharp/StellarStationService/: Program.cs  README.md  (+3 more)
examples/fakegroundstation/: README.md  ground_station_service.py  main.py  test_ground_station_service.py
examples/fakeserver/: README.md  api-key.json  build.gradle  settings.gradle
examples/printing-client/: README.md  build.gradle
examples/python/: README.md  README.txt  requirements.txt
examples/rust/streamcli/: Cargo.toml  README.md  build.rs  shell.nix
examples/rust/streamcli/.nix/: sources.json
examples/rust/streamcli/src/: main.rs  stream.rs
gradle/: get-jdk.sh
integration-tests/java/: README.md  build.gradle
integration-tests/python/: README.md  conftest.py  requirements.txt
nix/: sources.json
portal/: .firebaserc  build.gradle.kts  firebase.json  package.json
portal/src/: placeholder.txt
stubs/: README.md
stubs/cpp/: build.gradle  build.gradle.kts
stubs/docs/: build.gradle.kts  docs.go  go.mod  go.sum  tools.go
stubs/golang/: build.gradle  build.gradle.kts  go.mod  go.sum  grpcapis.go  tools.go
stubs/nodejs/: build.gradle  build.gradle.kts  package-template.json
stubs/python/: build.gradle  build.gradle.kts
stubs/python-compiler/: build.gradle
test/python/: conftest.py
(+122 files in other folders)
