[package]
name = "streamcli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.14", features = ["derive", "env"] }
google-cloud-auth = { version = "0.13.0", default-features = false, features = ["rustls-tls"] }
prost = "0.12.3"
prost-types = "0.12.3"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.14"
tokio-util = "0.7.10"
tonic = { version = "0.10.2", features = ["tls", "tls-roots"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.10.2"
